Ejercicios corregidos luego de Masterclass